Update schedule for actions
With this we get a fresh run every Monday around 04:00. Using this scheduled run we should see failures before we're trying to update the gem itself.

--- a/.github/workflows/minitest.yml
+++ b/.github/workflows/minitest.yml
@@ -6,7 +6,10 @@ name: minitest
   push:
     branches:
       - master
-      - master-rn
+      - support-*
+  schedule:
+    # Every week on Monday at 04:00
+    - cron: '0 4 * * 1'
 
 jobs:
   test:
